<resources>
    <string name="app_name">Prime Shipping</string>
    <!-- Strings related to login -->
    <string name="prompt_userName">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_userName">This userName address is invalid</string>
    <string name="error_invalid_password">Please enter the password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing userName
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="string_choose_file">choose file</string>
    <string name="string_upload_image">upload image</string>
    <string name="string_view_image">view image</string>
    <string name="title_activity_start_main">StartMain</string>
    <string name="title_activity_main_app">Prime International Shipping LLC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="Error_In_Loading">Error in Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rightDoulbe">\u2713\u2713</string>
    <string name="Import">Import</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="Tools">Tools</string>
    <string name="Slideshow">Slideshow</string>
    <string name="Gallery">Gallery</string>
    <string name="fullImageView">fullImageView</string>
    <string name="carImage">carImage</string>
    <string name="imageForreleaseState">imageForreleaseState</string>
    <string name="Icon">Icon</string>
    <string name="Communicate">Access</string>
    <string name="arrowImage">arrowImage</string>
    <string name="emptyImagePlaceHolder">emptyImagePlaceHolder</string>
    <string name="Images">Images</string>
    <string name="Docs">DOC</string>
    <string name="VinText">Vin: </string>
    <string name="ModelText">Model: </string>
    <string name="MakeText">Make: </string>
    <string name="YearText">Year: </string>
    <string name="assemlyCountryText">Assemly Country: </string>
    <string name="colorText">Color:</string>
    <string name="engineLitersText">Engine Liters: </string>
    <string name="bodyStyleText">Body Style</string>
    <string name="engineTypeText">Engine Type:</string>
    <string name="descriptionText">Description:</string>
    <string name="VehicalData">Vehical Data</string>
    <string name="HolderData">Holders Data</string>
    <string name="MainUser">Main Username:</string>
    <string name="MainUser2">Main Username 2:</string>
    <string name="shipperName">Shipper Username:</string>
    <string name="vendorText">Vendor Username:</string>
    <string name="consigneeText">Consignee Username:</string>
    <string name="customerText">Customer Username:</string>
    <string name="ProblemErrorOnServerAddNewCar">Problem on Add New Car To Server</string>
    <string name="ProblemOnHandleData">Problem to handle data!!!</string>
    <string name="ShipmentStates">Shipment State</string>
    <string name="release">Release</string>
    <string name="FreightVehicals">Freight Vehicals</string>
    <string name="LogOut">sign out</string>
    <string name="PleaseCheckNetworkConnection">Please Check the Internet Connection</string>
    <string name="Pdfs">Pdfs</string>
    <string name="remote_pdf_url">Remote PDF URL</string>
    <string name="download">Tap to start download</string>
    <string name="DriverSigniture">Driver Signature</string>
    <string name="DriverSignitureDestination">Driver Signature Destination</string>


    <string name="agreementForDriverDeliver">I have deliver the vehicle.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="TYPE">Type</string>
    <string name="DriverName">Driver Name</string>
    <string name="driverPhoneText">Driver Phone</string>
    <string name="CompanytransportationNameText">Transportation Company Name</string>
    <string name="keyExistText">Is Key Exists</string>
    <string name="titleExistText">Are Title Exists?</string>
    <string name="KeyNumbers">Number of Keys</string>


    <string name="three_d_image">3D</string>


    <string name="theta_ip_address">192.168.1.1</string>
    <string name="label_btn_shoot">shoot</string>
    <string name="text_camera_notconnected">Not connected</string>
    <string name="text_camera_standby">Standby</string>
    <string name="text_camera_synthesizing">Image synthesizing</string>

    <string name="menu_configuration">inertia</string>
    <string name="menu_connection">connection</string>
    <string name="rotate_inertia">rotation inertia</string>
    <string name="inertia_0">none</string>
    <string name="inertia_50">weak</string>
    <string name="inertia_100">strong</string>
    <string name="delete_dialog_message">Delete this file?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="label_btn_image_size">Image Size</string>
    <string name="image_size_2048x1024">2048 x 1024</string>
    <string name="image_size_5376x2688">5376 x 2688</string>
    <string name="title_activity_panorama_view">PanoramaView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="HintForOpenWifi">Please Connect to the Wifi for Camera</string>
    <string name="CamerathreeDList">3D List</string>


    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <string name="Ext">EXT</string>
    <string name="weightText">Weight</string>
    <string name="fuelTypeSecondaryText">Fuel Secondary</string>
    <string name="fuelTypePrimaryText">Fuel Primary</string>
    <string name="containerList">Containers</string>
    <string name="containerImage">Container Image</string>
    <string name="Container_NumberText">Container Number</string>
    <string name="ProblemErrorOnServerAddNewContainer">Server Problem On Add Container</string>
    <string name="ContainerData">Container Data</string>
    <string name="ContainerStates">Container Other Data</string>
</resources>
