<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Freightlist"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/FreightVehicals" />

        <item
            android:id="@+id/containerList"
            android:icon="@mipmap/emptybox"
            android:title="@string/containerList" />

        <item
            android:id="@+id/threeDList"
            android:icon="@mipmap/theta"
            android:title="@string/CamerathreeDList" />

    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_call_missed_outgoing_black_24dp"
                android:title="@string/LogOut" />
        </menu>
    </item>

</menu>
