<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/VinText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/vinEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/ModelText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/modelEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/MakeText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/makeEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/TYPE"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <Spinner
            android:entries="@array/VehicleTypes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/typeSelect">

        </Spinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/YearText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/yearEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/descriptionText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/descriptionEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/assemlyCountryText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/assemlyCountryEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/colorText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/colorEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/engineLitersText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/engineLitersEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/bodyStyleText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"

            android:layout_gravity="center"
            android:id="@+id/bodyStyleEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/engineTypeText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/engineTypeEdit">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/DriverName"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/driverNameEdit">

        </EditText>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/driverPhoneText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/driverPhoneEdit">

        </EditText>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/CompanytransportationNameText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/companyTransNameEdit">

        </EditText>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/keyExistText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"

            android:layout_gravity="center"
            android:id="@+id/keyExistEdit">

        </androidx.appcompat.widget.AppCompatCheckBox>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>
