<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/MainUser"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/MainUserEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/MainUser2"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/MainUser2Edit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/shipperName"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/shipperNameEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/vendorText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/vendorEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/consigneeText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/consigneeEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dataH"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/marginTopTextEdit"
            android:layout_height="match_parent"
            android:text="@string/customerText"
            android:textSize="@dimen/sizeBold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sizeSmall"
            android:layout_gravity="center"
            android:id="@+id/customerEdit">

        </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sepHight"
        android:foreground="#ACABAB"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>
